# aivana

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  HEROKU.md  Procfile  README.md  RENDER.md  app.json  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  start.bat
.github/workflows/: heroku-deploy.yml  render-deploy.yml
app/: config.py  main.py
app/agents/: base.py  content_os.py  content_registry.py  content_tools.py  data_scraper.py  file_download.py  gmail_calendar.py  gmail_organizer.py  invoice_matcher.py  knowledge_base.py  mailer.py  perception.py  perception_registry.py  planner.py  telecaller.py  understanding.py  understanding_registry.py  whatsapp.py
app/api/: auth_routes.py  deps.py  routes.py  template_routes.py
app/models/: template_package.py
app/services/: auth.py  available_models.py  database.py  event_bus.py  gmail_auth.py  human_input.py  langchain_content.py  langchain_llm.py  langchain_workflow.py  llm.py  model_router.py  result_queue.py  run_context.py  run_control.py  template_catalog.py  template_store.py  tenant.py  veo_video.py  youtube_auth.py
app/static/: app.js  auth.js  index.html  model_router.js  models.js  onboarding.js  studio.js  style.css
data/invoices/: sample_invoices.csv
docs/: GMAIL_OAUTH.md
tests/: conftest.py  test_available_models.py  test_content_os.py  test_knowledge_base.py  test_model_router.py  test_perception.py  test_run_control.py  test_smoke.py  test_templates_langchain.py  test_understanding.py  test_video_embeddings.py  test_youtube_auth.py
(+8 files in other folders)
