[project]
name = "agent"
version = "0.1.0"
description = "Task-executing agents: invoice matcher and Gmail organizer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.150.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "bcrypt>=4.2.0",
    "email-validator>=2.2.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pypdf>=5.0.0",
    "numpy>=1.24.0",
    "sqlalchemy>=2.0.0",
    "gunicorn>=23.0.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
]

[project.optional-dependencies]
turbovec = ["turbovec>=0.4.0"]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
